[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collections-sync"
version = "0.1.0"
description = "Collections status sync service for delinquent tenant tracking"
requires-python = ">=3.11"
authors = [
    {name = "BRH", email = "dev@brh.com"},
]

dependencies = [
    "core-integrations",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/collections_sync"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "../core-integrations/src"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
